--- a/src/styles/Run.css
+++ b/src/styles/Run.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: row;
   gap: 1em;
-  margin: 1em 0;
+  margin: 0;
   border-radius: 169px 0.375rem 0.375rem 169px;
   width: 90%;
   height: 20em;
